# casimir

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
jupyter/: hypocasimir.ipynb
src/hypocasimir/: __init__.py
src/hypocasimir/computations/: __init__.py  upper_bound.py
src/hypocasimir/labels/: __init__.py  labels.py  labels_container.py  partitions.py  plot.py  signatures.py
src/hypocasimir/lie/: __init__.py  groups.py  symmetric.py
src/hypocasimir/systems/: __init__.py  named.py  spaces.py  weights.py
tests/: tests.py
